// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader should render when date 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#DCF0E5",
      "borderBottomWidth": 2,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 16,
      "shadowColor": "transparent",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowRadius": 0,
    }
  }
>
  <Text.Primary
    blue={true}
    bold={true}
    style={
      Object {
        "textTransform": "capitalize",
      }
    }
  >
    December 2020
  </Text.Primary>
  <Ionicons
    color="#3957D0"
    name="ios-chevron-forward-outline"
    size={24}
    style={Object {}}
  />
</TouchableOpacity>
`;

exports[`SectionHeader should render when title 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#DCF0E5",
      "borderBottomWidth": 2,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 16,
      "shadowColor": "transparent",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowRadius": 0,
    }
  }
>
  <Text.Primary
    blue={true}
    bold={true}
    style={
      Object {
        "textTransform": "capitalize",
      }
    }
  >
    some title
  </Text.Primary>
  <Ionicons
    color="#3957D0"
    name="ios-chevron-forward-outline"
    size={24}
    style={Object {}}
  />
</TouchableOpacity>
`;
